Fix "add note" button align

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -330,3 +330,32 @@ body {
 .cancel-btn:hover {
     background-color: #f2f2f2;
 }
+
+#notes {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 20px 0;
+}
+
+.note {
+    width: calc(20% - 10px);
+    height: calc(50vh - 10px);
+    margin: 5px;
+    background-color: #ecf0f1;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.add-note-item {
+    width: calc(20% - 10px);
+    height: calc(50vh - 10px);
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
